Legger til støtte for å hente dokumentoversikt og spesifikk dokument fra saf-selvbetjening. (#142)
* Integrerer mot saf-selvbetjening for dokumentoversikt.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Legger til safselvbetjening i externalHosts.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Fjerner private fra properties.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Fikser propery injection

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Fikser propery injection

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Legger til pid med verdi sub i claimet på tokenet.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Legger til pid med verdi sub i claimet på tokenet.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Legger til pid med verdi sub i claimet på tokenet.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Legger til pid med verdi sub i claimet på tokenet.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Legger på Bearer foran tokent.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Logger dokumentSomBase64

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Refaktorerer hentDokument retur type.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Logger inngående og utgåedne kall.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Logger inngående og utgåedne kall.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Legger til støtte for filtrering av dokumenter med ønsket brevkoder.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Logger filterering via brevkoder.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Fjerner case-sensitivitet ved filtrering via brevkoder.

Sig

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,7 @@ no.nav:
     k9-selvbetjening-oppslag: # Settes i nais/<cluster>.json
     saf-base-url: # Settes i nais/<cluster>.json
     k9-sak-innsyn-api-base-url: # Settes i nais/<cluster>.json
+    saf-selvbetjening-base-url: # Settes i nais/<cluster>.json
     sts:
       url: # Settes i nais/dev-gcp.json
       username: ${STS_USERNAME} # kubectl secret som miljøvariabel i pod
@@ -62,6 +63,8 @@ topic:
       navn: aapen-dok-journalfoering-v1-p
       bryter: true
       dry-run: false
+
+application-ingress: ${APPLICATION_INGRESS}
 
 management:
   endpoints:
