--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,7 +60,7 @@ topic:
     # topic.listener.dok-journalfoering-v1
     dok-journalfoering-v1:
       id: dok-journalfoering-v1-listener
-      navn: aapen-dok-journalfoering-v1-p
+      navn: teamdokumenthandtering.aapen-dok-journalfoering
       bryter: true
       dry-run: false
 
@@ -105,25 +105,6 @@ spring:
     driver-class-name: org.postgresql.Driver
 
 kafka:
-  onprem:
-    servers: # overstyres fra nais/<cluster>.json
-    consumer:
-      enable-auto-commit: false
-      group-id: ${spring.application.name}
-      auto-offset-reset:  # overstyres fra nais/<cluster>.json
-      isolation-level: read_committed
-      retry-interval: 60_000 # Egendefinert property
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      schemaRegistryUrl: # overstyres fra nais/<cluster>.json
-
-    producer:
-      client-id: ${HOSTNAME}
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-      transaction-id-prefix: .tx-
-      retries: 3
-
   aiven:
     servers: ${KAFKA_BROKERS}
     consumer:
