Legger til innloggin info for schemaRegistry.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -26,6 +26,9 @@ spring:
 
 kafka:
   aiven:
+    consumer:
+      schemaRegistryUser: ${KAFKA_SCHEMA_REGISTRY_USER}
+      schemaRegistryPassword: ${KAFKA_SCHEMA_REGISTRY_PASSWORD}
     properties:
       security:
         protocol: SSL
