--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,5 +1,8 @@
 name: Vulnerabilities scanning of dependencies
 on:
+  push:
+    branches:
+      - master
   schedule:
     - cron:  '0 3 * * *'
 
@@ -7,7 +10,7 @@ jobs:
   security:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.3.4
+      - uses: actions/checkout@v2.4.0
 
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/gradle-jdk11@master
@@ -17,4 +20,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           command: monitor
-          args: --org=dusseldorf --configuration-attributes=usage:java-runtime --project-name=${{ github.repository }} --remote-repo-url=https://github.com/${{ github.repository }}.git
+          args: --org=dusseldorf --configuration-matching=^runtimeClasspath$|^compileClasspath$ --project-name=${{ github.repository }} --remote-repo-url=https://github.com/${{ github.repository }}.git
