Fiks beskjed og legger til dryrun støtte. consumerer ikke i prod enda

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -4,6 +4,9 @@ topic:
     pp-sykt-barn:
       bryter: true
       dry-run: false
+    pp-sykt-barn-endringsmelding:
+      bryter: false
+      dry-run: false
     k9-ettersending:
       bryter: true
       dry-run: false
