Setter api-docs og swagger-ui path.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -138,6 +138,9 @@ kafka:
       retries: 3
 
 springdoc:
-  version: '1.0.0'
+  version: 1.0
+  api-docs:
+    path: /api-docs
   swagger-ui:
     use-root-path: true
+    path: /swagger
