Oppgraderer Spring Boot, pakker, og actions. (#205)
* Oppgraderer Spring Boot og erstatter SpringFox med Springdoc.

* Legger til server url.

* Fjerner addResourceHandlers for swagger config.

* Eksponerer alle endepunkt i dev.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

* Ignorerer org.springdoc i token validation

* Disabler swagger-ui i prod.

* Oppdaterer pakker og actions.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -136,3 +136,8 @@ kafka:
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
       transaction-id-prefix: .tx-
       retries: 3
+
+springdoc:
+  swagger-ui:
+    disable-swagger-default-url: true
+    path: swagger-ui.html
