Legger til tokenx issuer og konfigurerer tokenx mot k9-sak-innsyn-api.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -49,6 +49,9 @@ no.nav:
       loginservice:
         discoveryUrl: ${LOGINSERVICE_IDPORTEN_DISCOVERY_URL} # settes av configmap: loginservice-idporten i naiserator.yml
         accepted_audience: ${LOGINSERVICE_IDPORTEN_AUDIENCE} # settes av configmap: loginservice-idporten i naiserator.yml
+      tokenx:
+        discoveryUrl: ${TOKEN_X_WELL_KNOWN_URL}
+        accepted_audience: ${TOKEN_X_CLIENT_ID}
     client:
       registration:
         tokenx-safselvbetjening:
@@ -60,6 +63,16 @@ no.nav:
             client-jwk: ${TOKEN_X_PRIVATE_JWK}
           token-exchange:
               audience: ${SAFSELVBETJENING_TOKEN_X_AUDIENCE}
+
+        tokenx-k9-sak-innsyn-api:
+          token-endpoint-url: ${TOKENDINGS_BASE_URL}/token
+          grant-type: urn:ietf:params:oauth:grant-type:token-exchange
+          authentication:
+            client-auth-method: private_key_jwt
+            client-id: ${TOKEN_X_CLIENT_ID}
+            client-jwk: ${TOKEN_X_PRIVATE_JWK}
+          token-exchange:
+            audience: ${K9_SAK_INNSYN_API_TOKEN_X_AUDIENCE}
 
   dittnav:
     pleiepenger-sykt-barn:
