--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -16,6 +16,9 @@ no.nav:
           discoveryurl: http://localhost:${mock-oauth2-server.port}/loginservice/.well-known/openid-configuration
           accepted_audience: aud-localhost
           cookie_name: selvbetjening-idtoken
+        tokenx:
+          discoveryurl: http://localhost:${mock-oauth2-server.port}/tokenx/.well-known/openid-configuration
+          accepted_audience: aud-localhost
       client:
         registration:
           tokenx-safselvbetjening:
@@ -27,6 +30,16 @@ no.nav:
               client-jwk: src/test/resources/tokenx-jwk.json
             token-exchange:
               audience: dev-fss:teamdokumenthandtering:safselvbetjening
+
+          tokenx-k9-sak-innsyn-api:
+            token-endpoint-url: http://localhost:8080/default/token
+            grant-type: urn:ietf:params:oauth:grant-type:token-exchange
+            authentication:
+              client-auth-method: private_key_jwt
+              client-id: "dev-gcp:dusseldorf:sif-innsyn-api"
+              client-jwk: src/test/resources/tokenx-jwk.json
+            token-exchange:
+              audience: dev-gcp:dusseldorf:k9-sak-innsyn-api
     cors:
       allowed-origins: http://localhost:8080
 
