Utveklser token med tokenx før kall på k9-selvbetjening-oppslag.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -23,7 +23,7 @@ no.nav:
       client:
         registration:
           tokenx-safselvbetjening:
-            token-endpoint-url: http://localhost:8080/default/token
+            token-endpoint-url: http://localhost:${mock-oauth2-server.port}/default/token
             grant-type: urn:ietf:params:oauth:grant-type:token-exchange
             authentication:
               client-auth-method: private_key_jwt
@@ -33,7 +33,7 @@ no.nav:
               audience: dev-fss:teamdokumenthandtering:safselvbetjening
 
           tokenx-k9-sak-innsyn-api:
-            token-endpoint-url: http://localhost:8080/default/token
+            token-endpoint-url: http://localhost:${mock-oauth2-server.port}/default/token
             grant-type: urn:ietf:params:oauth:grant-type:token-exchange
             authentication:
               client-auth-method: private_key_jwt
@@ -41,6 +41,16 @@ no.nav:
               client-jwk: src/test/resources/tokenx-jwk.json
             token-exchange:
               audience: dev-gcp:dusseldorf:k9-sak-innsyn-api
+
+          tokenx-k9-selvbetjening-oppslag:
+            token-endpoint-url: http://localhost:${mock-oauth2-server.port}/default/token
+            grant-type: urn:ietf:params:oauth:grant-type:token-exchange
+            authentication:
+              client-auth-method: private_key_jwt
+              client-id: dev-gcp:dusseldorf:sif-innsyn-api
+              client-jwk: src/test/resources/tokenx-jwk.json
+            token-exchange:
+              audience: dev-fss:dusseldorf:k9-selvbetjening-oppslag
     cors:
       allowed-origins: http://localhost:8080
 
