--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -2,22 +2,35 @@ name: Vulnerabilities scanning of dependencies
 on:
   push:
     branches:
-      - master
+      - main
   schedule:
     - cron:  '0 3 * * *'
+
+env:
+  IMAGE: navikt/sif-innsyn-api:${{ github.sha }}
+  GITHUB_USERNAME: x-access-token
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   security:
     runs-on: ubuntu-latest
+    env:
+      SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      SNYK_CFG_ORG: dusseldorf
     steps:
       - uses: actions/checkout@v3
-
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/gradle-jdk11@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-          GITHUB_USERNAME: x-access-token
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          command: monitor
-          args: --org=dusseldorf --configuration-matching=^runtimeClasspath$|^compileClasspath$ --project-name=${{ github.repository }} --remote-repo-url=https://github.com/${{ github.repository }}.git
+          java-version: 17
+          distribution: 'zulu'
+          #cache: 'gradle'
+      - name: Build JAR
+        run: ./gradlew clean build -x test # Creates a combined JAR of project and runTime dependencies.
+      - name: Build Docker image
+        run: docker build --tag ${IMAGE} .
+
+      - uses: snyk/actions/setup@master
+      - name: Monitor container image
+        run: |
+          snyk container monitor $IMAGE --file=Dockerfile --app-vulns
