--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -2,7 +2,7 @@ name: Vulnerabilities scanning of dependencies
 on:
   push:
     branches:
-      - main
+      - master
   schedule:
     - cron:  '0 3 * * *'
 
