Bruker service-discovery for oppslag.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -24,7 +24,8 @@ spec:
         {{#each externalHosts as |host|}}
         - host: {{host}}
         {{/each}}
-      rules: []
+      rules:
+        - application: k9-selvbetjening-oppslag
   liveness:
     path: /actuator/health
     initialDelay: 60
