Bruker service discovery ved kall til k9-sak-innsyn-api
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -26,6 +26,7 @@ spec:
         {{/each}}
       rules:
         - application: k9-selvbetjening-oppslag
+        - application: k9-sak-innsyn-api
   liveness:
     path: /actuator/health
     initialDelay: 60
