Erstatter GitHub's Docker registry med Container registry

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -13,7 +13,7 @@ on:
     branches:
 
 env:
-  IMAGE: docker.pkg.github.com/${{ github.repository }}/sif-innsyn-api:${{ github.sha }}
+  IMAGE: ghcr.io/${{ github.repository }}/sif-innsyn-api:${{ github.sha }}
   GITHUB_USERNAME: x-access-token
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -52,7 +52,7 @@ jobs:
       - name: Build and publish Docker image
         run: |
           docker build --tag ${IMAGE} .
-          docker login docker.pkg.github.com -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
+          docker login ghcr.io -u ${GITHUB_REPOSITORY} -p ${GITHUB_TOKEN}
           docker push ${IMAGE}
 
   deploy-dev-gcp:
