Fikser validering av claims for flere issuers.
- Oppretter konstanter for konfigurerte issuers.
- Sletter ubrukt bootstrap-local.yml.

Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,7 +40,7 @@ no.nav:
       allowed-origins: # Settes i nais/<cluster>.json
     jwt:
       issuer:
-        loginservice:
+        idporten:
           discoveryUrl: ${LOGINSERVICE_IDPORTEN_DISCOVERY_URL} # settes av configmap: loginservice-idporten i naiserator.yml
           accepted_audience: ${LOGINSERVICE_IDPORTEN_AUDIENCE} # settes av configmap: loginservice-idporten i naiserator.yml
           cookie_name: # Settes inais/<cluster>.json
