Legger til pleiepengesoknad i inbound rules.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -19,6 +19,7 @@ spec:
       rules:
         - application: sif-innsyn
         - application: pleiepengesoknad-api
+        - application: pleiepengesoknad
     outbound:
       external:
         {{#each externalHosts as |host|}}
