Eksponerer health endepunkt.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -1,8 +1,9 @@
 management:
-  endpoint:
+  endpoints:
     web:
       exposure:
         include: '*'
+  endpoint:
     health:
       show-details: always
 
