--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -14,10 +14,11 @@ topic:
       bryter: true
 
 management:
-  endpoint:
+  endpoints:
     web:
       exposure:
         include: health
+  endpoint:
     health:
       show-details: never
 
