--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -122,6 +122,7 @@ management:
       show-details: always
   endpoints:
     web:
+      base-path: /internal/actuator
       exposure:
         include: health, prometheus
 
