Setter health endepunkter til på root.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -122,7 +122,7 @@ management:
       show-details: always
   endpoints:
     web:
-      base-path: /internal/actuator
+      base-path: /
       exposure:
         include: health, prometheus
 
