--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -28,13 +28,13 @@ spec:
         - application: k9-selvbetjening-oppslag
         - application: k9-sak-innsyn-api
   liveness:
-    path: /internal/actuator/health/liveness
+    path: /health/liveness
     initialDelay: 60
     timeout: 1
     periodSeconds: 5
     failureThreshold: 10
   readiness:
-    path: /internal/actuator/health/readiness
+    path: /health/readiness
     initialDelay: 60
     timeout: 1
   resources:
@@ -54,7 +54,7 @@ spec:
     cpuThresholdPercentage: 90
   prometheus:
     enabled: true
-    path: /actuator/prometheus
+    path: /prometheus
   envFrom:
     - configmap: loginservice-idporten
     - secret: sif-innsyn-api.sts-credentials
