--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -125,6 +125,8 @@ management:
       base-path: /
       exposure:
         include: health, prometheus
+      path-mapping:
+        prometheus: /metrics
 
 spring:
   application:
