Endrer mapping fra /prometheus til /metrics.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -54,7 +54,7 @@ spec:
     cpuThresholdPercentage: 90
   prometheus:
     enabled: true
-    path: /prometheus
+    path: /metrics
   envFrom:
     - configmap: loginservice-idporten
     - secret: sif-innsyn-api.sts-credentials
