--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -74,7 +74,7 @@ no.nav:
               audience: ${K9_SELVBETJENING_OPPSLAG_TOKEN_X_AUDIENCE}
 
           azure-saf:
-            token-endpoint-url: ${AZURE_OPENID_CONFIG_TOKEN_ENDPOINT}/token
+            token-endpoint-url: ${AZURE_OPENID_CONFIG_TOKEN_ENDPOINT}
             grant-type: client_credentials
             scope: ${SAF_AZURE_SCOPE}
             authentication:
