--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -19,6 +19,7 @@ spec:
       rules:
         - application: sif-innsyn
         - application: pleiepengesoknad-api
+        - application: k9-brukerdialog-api
     outbound:
       external:
         {{#each externalHosts as |host|}}
