Filterer ut 451 feil fra alerts.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/nais/alerterator-prod.yml
+++ b/nais/alerterator-prod.yml
@@ -41,7 +41,7 @@ spec:
 
     - alert: Høy andel HTTP klientfeil (4xx responser)
       severity: danger
-      expr: floor(increase(http_server_requests_seconds_count{status=~"4.*", status!~"404|401|403", app="{{app}}"}[3m])) > 0
+      expr: floor(increase(http_server_requests_seconds_count{status=~"4.*", status!~"404|401|403|451", app="{{app}}"}[3m])) > 0
       for: 1m
       description: "Følgende request feilet: `Status \{{ $labels.status }} - \{{ $labels.method }} \{{ $labels.route }}`.\n
                     Grunn:\n ```\{{ $labels.problem_details }}```\n
