--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -18,6 +18,7 @@ spec:
     inbound:
       rules:
         - application: sif-innsyn
+        - application: endringsmelding-pleiepenger
         - application: pleiepengesoknad-api
         - application: k9-brukerdialog-api
     outbound:
@@ -56,8 +57,6 @@ spec:
   prometheus:
     enabled: true
     path: /metrics
-  envFrom:
-    - configmap: loginservice-idporten
   env:
   {{#each env}}
    - name: {{@key}}
