Migrerer til ny topic for konsumering av ettersendelser.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -101,7 +101,7 @@ topic:
     # topic.listener.k9-ettersending
     k9-ettersending:
       id: k9-ettersending-listener
-      navn: dusseldorf.privat-k9-ettersending-cleanup
+      navn: dusseldorf.ettersendelse-cleanup
       bryter: true
       dry-run: false
 
