Legger til dependency-submission
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/.github/workflows/dependency-submission.yml
+++ b/.github/workflows/dependency-submission.yml
@@ -2,7 +2,7 @@ name: Dependency Submission
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       - "**.gradle.kts"
       - ".github/workflows/dependency-submission.yml"
