Skanner kode med codeql.
Signed-off-by: Ramin Esfandiari <ramin_esfandiari_93@hotmail.com>

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -8,7 +8,7 @@ on:
       - 'LICENCE'
       - 'CODEOWNERS'
       - '.github/workflows/apply-alerts.yml'
-      - '.github/workflows/snyk.yml'
+      - '.github/workflows/codeql.yml'
       - ".github/workflows/dependency-submission.yml"
       - 'nais/alerterator-*'
     branches:
